test/e2e/valid/function.mylang
{
    define function_plus of int32(a of int32, b of int32){
        define imut x of int32 = 0;
        return a + b + x;
    }
    define imut x of int32 = 10;
    define imut y of int32 = 20;
    define imut z of int32 = function_plus(x, y);
}
